--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<div id="sphere2">
 				
 			</div>
-			<span id="sphere-text" style="text-align:center; vertical-align:middle; display:none; width:260px;">
+			<span id="sphere-text">
 
 				<h1 id="date-month">January</h1>
 				<h1 id="date-day">2</h1>
@@ -77,6 +77,12 @@
 		</div>
 
 
+		<div id="iphone-sphere"> </div>
+			<div id="iphone-sphere-text">
+				<h3 id="iphone-day"></h3>
+				<h3 id="iphone-month"></h3>
+				<h3 id="iphone-year"></h3>
+			</div>
 
 
 		<div class="grid">
@@ -144,47 +150,44 @@
 
 			</div>
 
+
+
 			<div class="tablet-landscape-hidden tablet-portrait-hidden desktop-hidden">
 			
 
-				<div class="balledate">
 
-				</div>
 
-				<div class="column full" >
-					<img class="sansmarge" src="imgs/vie_scientifique/img/vs-img-3.jpg">
-					<img class="marge" src="imgs/vie_scientifique/txt/1903-12-11.jpg" title="NY Times December 11, 1903">
-				</div>
-
-				<div class="column full dest" >
-					<img class="marge" src="imgs/vie_scientifique/txt/1905-07-04.jpg">
-					<img class="marge" src="imgs/vie_scientifique/txt/1906-05-13.jpg">
-					<img class="sansmarge" src="imgs/vie_scientifique/img/vs-img-1.jpg">
-					<img class="marge" src="imgs/vie_scientifique/txt/1906-05-14.jpg">
-					<img class="sansmarge" src="imgs/vie_scientifique/img/vs-img-2.jpg">
-					<img class="marge" src="imgs/vie_scientifique/txt/1911-01-08.jpg">
-					<img class="marge" src="imgs/vie_scientifique/txt/1911-11-08.jpg">
-					<img class="marge" src="imgs/vie_scientifique/txt/1913_09_15.jpg">
-					<img class="marge" src="imgs/vie_scientifique/txt/1913-09-13.jpg">
-					<img class="sansmarge" src="imgs/vie_scientifique/img/vs-img-4.jpg">
-					<img class="marge" src="imgs/vie_scientifique/txt/1913-09-17.jpg">
-					<img class="marge" src="imgs/vie_scientifique/txt/1921-02-27_1.jpg">
-					<img class="sansmarge" src="imgs/vie_scientifique/img/vs-img-7.jpg">
-					<img class="marge" src="imgs/vie_scientifique/txt/1921-02-27_2.jpg">
-					<img class="sansmarge" src="imgs/vie_scientifique/img/vs-img-5.jpg">
-					<img class="marge" src="imgs/vie_scientifique/txt/1921-03-07.jpg">
-					<img class="sansmarge" src="imgs/vie_scientifique/img/vs-img-6.jpg">
-					<img class="marge" src="imgs/vie_scientifique/txt/1921-03-25.jpg">
-					<img class="marge" src="imgs/vie_scientifique/txt/1921-05-15_1.jpg">
-					<img class="sansmarge" src="imgs/vie_scientifique/img/vs-img-8.jpg">
-					<img class="marge" src="imgs/vie_scientifique/txt/1921-05-15_2.jpg">
-					<img class="marge" src="imgs/vie_scientifique/img/vs-img-9.jpg">
-					<img class="marge" src="imgs/vie_scientifique/txt/1921-05-15_3.jpg">
-					<img class="sansmarge" src="imgs/vie_scientifique/img/vs-img-10.jpg">
-					<img class="marge" src="imgs/vie_scientifique/txt/1929-11-01.jpg">
-					<img class="sansmarge" src="imgs/vie_scientifique/img/vs-img-11.jpg">
-					<img class="marge" src="imgs/vie_scientifique/txt/1930-07-24.jpg">
-					<img class="marge" src="imgs/vie_scientifique/txt/1932-07-08.jpg">
+				<div id="iphone-container" class="column full dest" style="margin-bottom:0!important;">
+					<img class="sansmarge" src="imgs/vie_scientifique/img/vs-img-3.jpg" data-day="4" data-month="July" data-year="1905">
+					<img class="marge" src="imgs/vie_scientifique/txt/1903-12-11.jpg" title="NY Times December 11, 1903" data-day="12" data-month="December" data-year="1925">
+					<img class="marge" src="imgs/vie_scientifique/txt/1905-07-04.jpg" data-day="4" data-month="July" data-year="1905">
+					<img class="marge" src="imgs/vie_scientifique/txt/1906-05-13.jpg" data-day="4" data-month="July" data-year="1905">
+					<img class="sansmarge" src="imgs/vie_scientifique/img/vs-img-1.jpg" data-day="4" data-month="July" data-year="1905">
+					<img class="marge" src="imgs/vie_scientifique/txt/1906-05-14.jpg" data-day="4" data-month="July" data-year="1905">
+					<img class="sansmarge" src="imgs/vie_scientifique/img/vs-img-2.jpg" data-day="4" data-month="July" data-year="1905">
+					<img class="marge" src="imgs/vie_scientifique/txt/1911-01-08.jpg" data-day="4" data-month="July" data-year="1905">
+					<img class="marge" src="imgs/vie_scientifique/txt/1911-11-08.jpg" data-day="4" data-month="July" data-year="1905">
+					<img class="marge" src="imgs/vie_scientifique/txt/1913_09_15.jpg" data-day="4" data-month="July" data-year="1905">
+					<img class="marge" src="imgs/vie_scientifique/txt/1913-09-13.jpg" data-day="4" data-month="July" data-year="1905">
+					<img class="sansmarge" src="imgs/vie_scientifique/img/vs-img-4.jpg" data-day="4" data-month="July" data-year="1905">
+					<img class="marge" src="imgs/vie_scientifique/txt/1913-09-17.jpg" data-day="4" data-month="July" data-year="1905">
+					<img class="marge" src="imgs/vie_scientifique/txt/1921-02-27_1.jpg" data-day="4" data-month="July" data-year="1905">
+					<img class="sansmarge" src="imgs/vie_scientifique/img/vs-img-7.jpg" data-day="4" data-month="July" data-year="1905">
+					<img class="marge" src="imgs/vie_scientifique/txt/1921-02-27_2.jpg" data-day="4" data-month="July" data-year="1905">
+					<img class="sansmarge" src="imgs/vie_scientifique/img/vs-img-5.jpg" data-day="4" data-month="July" data-year="1905">
+					<img class="marge" src="imgs/vie_scientifique/txt/1921-03-07.jpg" data-day="4" data-month="July" data-year="1905">
+					<img class="sansmarge" src="imgs/vie_scientifique/img/vs-img-6.jpg" data-day="4" data-month="July" data-year="1905">
+					<img class="marge" src="imgs/vie_scientifique/txt/1921-03-25.jpg" data-day="4" data-month="July" data-year="1905">
+					<img class="marge" src="imgs/vie_scientifique/txt/1921-05-15_1.jpg" data-day="4" data-month="July" data-year="1905">
+					<img class="sansmarge" src="imgs/vie_scientifique/img/vs-img-8.jpg" data-day="4" data-month="July" data-year="1905">
+					<img class="marge" src="imgs/vie_scientifique/txt/1921-05-15_2.jpg" data-day="4" data-month="July" data-year="1905">
+					<img class="marge" src="imgs/vie_scientifique/img/vs-img-9.jpg" data-day="4" data-month="July" data-year="1905">
+					<img class="marge" src="imgs/vie_scientifique/txt/1921-05-15_3.jpg" data-day="4" data-month="July" data-year="1905">
+					<img class="sansmarge" src="imgs/vie_scientifique/img/vs-img-10.jpg" data-day="4" data-month="July" data-year="1905">
+					<img class="marge" src="imgs/vie_scientifique/txt/1929-11-01.jpg" data-day="4" data-month="July" data-year="1905">
+					<img class="sansmarge" src="imgs/vie_scientifique/img/vs-img-11.jpg" data-day="4" data-month="July" data-year="1905">
+					<img class="marge" src="imgs/vie_scientifique/txt/1930-07-24.jpg" data-day="4" data-month="July" data-year="1905">
+					<img class="marge" src="imgs/vie_scientifique/txt/1932-07-08.jpg" data-day="4" data-month="July" data-year="1905">
 		
 				</div>
 			</div>
