--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 		</div>
 
 
-		<div id="iphone-sphere"> </div>
-			<div id="iphone-sphere-text">
+		<div id="iphone-sphere" class="desktop-hidden tablet-hidden"> </div>
+			<div id="iphone-sphere-text" class="desktop-hidden tablet-hidden">
 				<h3 id="iphone-day"></h3>
 				<h3 id="iphone-month"></h3>
 				<h3 id="iphone-year"></h3>
