--- a/index.html
+++ b/index.html
@@ -158,36 +158,36 @@
 
 
 				<div id="iphone-container" class="column full dest" style="margin-bottom:0!important;">
-					<img class="sansmarge" src="imgs/vie_scientifique/img/vs-img-3.jpg" data-day="4" data-month="July" data-year="1905">
-					<img class="marge" src="imgs/vie_scientifique/txt/1903-12-11.jpg" title="NY Times December 11, 1903" data-day="12" data-month="December" data-year="1925">
-					<img class="marge" src="imgs/vie_scientifique/txt/1905-07-04.jpg" data-day="4" data-month="July" data-year="1905">
-					<img class="marge" src="imgs/vie_scientifique/txt/1906-05-13.jpg" data-day="4" data-month="July" data-year="1905">
-					<img class="sansmarge" src="imgs/vie_scientifique/img/vs-img-1.jpg" data-day="4" data-month="July" data-year="1905">
-					<img class="marge" src="imgs/vie_scientifique/txt/1906-05-14.jpg" data-day="4" data-month="July" data-year="1905">
-					<img class="sansmarge" src="imgs/vie_scientifique/img/vs-img-2.jpg" data-day="4" data-month="July" data-year="1905">
-					<img class="marge" src="imgs/vie_scientifique/txt/1911-01-08.jpg" data-day="4" data-month="July" data-year="1905">
-					<img class="marge" src="imgs/vie_scientifique/txt/1911-11-08.jpg" data-day="4" data-month="July" data-year="1905">
-					<img class="marge" src="imgs/vie_scientifique/txt/1913_09_15.jpg" data-day="4" data-month="July" data-year="1905">
-					<img class="marge" src="imgs/vie_scientifique/txt/1913-09-13.jpg" data-day="4" data-month="July" data-year="1905">
-					<img class="sansmarge" src="imgs/vie_scientifique/img/vs-img-4.jpg" data-day="4" data-month="July" data-year="1905">
-					<img class="marge" src="imgs/vie_scientifique/txt/1913-09-17.jpg" data-day="4" data-month="July" data-year="1905">
-					<img class="marge" src="imgs/vie_scientifique/txt/1921-02-27_1.jpg" data-day="4" data-month="July" data-year="1905">
-					<img class="sansmarge" src="imgs/vie_scientifique/img/vs-img-7.jpg" data-day="4" data-month="July" data-year="1905">
-					<img class="marge" src="imgs/vie_scientifique/txt/1921-02-27_2.jpg" data-day="4" data-month="July" data-year="1905">
-					<img class="sansmarge" src="imgs/vie_scientifique/img/vs-img-5.jpg" data-day="4" data-month="July" data-year="1905">
-					<img class="marge" src="imgs/vie_scientifique/txt/1921-03-07.jpg" data-day="4" data-month="July" data-year="1905">
-					<img class="sansmarge" src="imgs/vie_scientifique/img/vs-img-6.jpg" data-day="4" data-month="July" data-year="1905">
-					<img class="marge" src="imgs/vie_scientifique/txt/1921-03-25.jpg" data-day="4" data-month="July" data-year="1905">
-					<img class="marge" src="imgs/vie_scientifique/txt/1921-05-15_1.jpg" data-day="4" data-month="July" data-year="1905">
-					<img class="sansmarge" src="imgs/vie_scientifique/img/vs-img-8.jpg" data-day="4" data-month="July" data-year="1905">
-					<img class="marge" src="imgs/vie_scientifique/txt/1921-05-15_2.jpg" data-day="4" data-month="July" data-year="1905">
-					<img class="marge" src="imgs/vie_scientifique/img/vs-img-9.jpg" data-day="4" data-month="July" data-year="1905">
-					<img class="marge" src="imgs/vie_scientifique/txt/1921-05-15_3.jpg" data-day="4" data-month="July" data-year="1905">
-					<img class="sansmarge" src="imgs/vie_scientifique/img/vs-img-10.jpg" data-day="4" data-month="July" data-year="1905">
-					<img class="marge" src="imgs/vie_scientifique/txt/1929-11-01.jpg" data-day="4" data-month="July" data-year="1905">
-					<img class="sansmarge" src="imgs/vie_scientifique/img/vs-img-11.jpg" data-day="4" data-month="July" data-year="1905">
-					<img class="marge" src="imgs/vie_scientifique/txt/1930-07-24.jpg" data-day="4" data-month="July" data-year="1905">
-					<img class="marge" src="imgs/vie_scientifique/txt/1932-07-08.jpg" data-day="4" data-month="July" data-year="1905">
+					<img class="sansmargebas" src="imgs/vie_scientifique/img/vs-img-3.jpg" data-day="10th" data-month="December" data-year="1903">
+					<img class="marge" src="imgs/vie_scientifique/txt/1903-12-11.jpg" data-day="10th" data-month="December" data-year="1903">
+					<img class="marge" src="imgs/vie_scientifique/txt/1905-07-04.jpg" data-day="4th" data-month="July" data-year="1905">
+					<img class="marge" src="imgs/vie_scientifique/txt/1906-05-13.jpg" data-day="13th" data-month="June" data-year="1906">
+					<img class="sansmargebas" src="imgs/vie_scientifique/img/vs-img-1.jpg" data-day="14th" data-month="June" data-year="1906">
+					<img class="marge" src="imgs/vie_scientifique/txt/1906-05-14.jpg" data-day="14th" data-month="June" data-year="1906">
+					<img class="sansmargebas" src="imgs/vie_scientifique/img/vs-img-2.jpg" data-day="08th" data-month="January" data-year="1911">
+					<img class="marge" src="imgs/vie_scientifique/txt/1911-01-08.jpg" dadata-day="08th" data-month="January" data-year="1911">
+					<img class="marge" src="imgs/vie_scientifique/txt/1911-11-08.jpg" data-day="08th" data-month="November" data-year="1911">
+					<img class="marge" src="imgs/vie_scientifique/txt/1913_09_15.jpg" data-day="15th" data-month="September" data-year="1913">
+					<img class="marge" src="imgs/vie_scientifique/txt/1913-09-13.jpg" data-day="13th" data-month="September" data-year="1913">
+					<img class="sansmargebas" src="imgs/vie_scientifique/img/vs-img-4.jpg" data-day="17th" data-month="September" data-year="1913">
+					<img class="marge" src="imgs/vie_scientifique/txt/1913-09-17.jpg" data-day="17th" data-month="September" data-year="1913">
+					<img class="sansmargebas" src="imgs/vie_scientifique/txt/1921-02-27_1.jpg" data-day="27th" data-month="February" data-year="1921">
+					<img class="sansmargebas" src="imgs/vie_scientifique/img/vs-img-7.jpg" data-day="27th" data-month="February" data-year="1921">
+					<img class="marge" src="imgs/vie_scientifique/txt/1921-02-27_2.jpg" ddata-day="27th" data-month="February" data-year="1921">
+					<img class="sansmargebas" src="imgs/vie_scientifique/img/vs-img-5.jpg" data-day="7th" data-month="March" data-year="1921">
+					<img class="marge" src="imgs/vie_scientifique/txt/1921-03-07.jpg" data-day="7th" data-month="March" data-year="1921">
+					<img class="sansmargebas" src="imgs/vie_scientifique/img/vs-img-6.jpg" data-day="25th" data-month="March" data-year="1921">
+					<img class="marge" src="imgs/vie_scientifique/txt/1921-03-25.jpg" data-day="25th" data-month="March" data-year="1921">
+					<img class="sansmargebas" src="imgs/vie_scientifique/txt/1921-05-15_1.jpg" data-day="15th" data-month="May" data-year="1921">
+					<img class="sansmargebas" src="imgs/vie_scientifique/img/vs-img-8.jpg" data-day="15th" data-month="May" data-year="1921">
+					<img class="sansmargebas" src="imgs/vie_scientifique/txt/1921-05-15_2.jpg" data-day="15th" data-month="May" data-year="1921">
+					<img class="sansmargebas" src="imgs/vie_scientifique/img/vs-img-9.jpg" data-day="15th" data-month="May" data-year="1921">
+					<img class="marge" src="imgs/vie_scientifique/txt/1921-05-15_3.jpg" data-day="15th" data-month="May" data-year="1921">
+					<img class="sansmargebas" src="imgs/vie_scientifique/img/vs-img-10.jpg" data-day="01" data-month="November" data-year="1929">
+					<img class="marge" src="imgs/vie_scientifique/txt/1929-11-01.jpg" data-day="01" data-month="November" data-year="1929">
+					<img class="sansmargebas" src="imgs/vie_scientifique/img/vs-img-11.jpg" data-day="24" data-month="July" data-year="1930">
+					<img class="marge" src="imgs/vie_scientifique/txt/1930-07-24.jpg" data-day="24" data-month="July" data-year="1930">
+					<img class="marge" src="imgs/vie_scientifique/txt/1932-07-08.jpg" data-day="08" data-month="July" data-year="1932">
 		
 				</div>
 			</div>
