--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
 
 		<link rel="shortcut icon" type="image/png" href="imgs/favicon.png" />
 
+
 		<title>Madame Curie</title>
 	</head>
 
 	<body>
 		<div class="mobile-hidden tablet-hidden" style="overflow:hidden; height:8000px; position:fixed;">
 			<div id="big-pic" style="max-width:none; width:6000px; height:6000px; overflow:hidden;">
-				<img src="imgs/path.png" width="100%" height="100%">
+				<img src="imgs/path2.png" width="100%" height="100%">
 			</div>
 		</div>
 		
