--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 			</div>
 		</div>
 
-		<div class="mobile-hidden desktop-hidden" style="overflow:hidden; height:8000px; position:fixed;">
-			<div id="big-pic-tablet" style="max-width:none; width:2000px; height:2000px; overflow:hidden;">
+		<div class="mobile-hidden desktop-hidden" style="overflow:hidden; height:8000px; position:fixed; top:0;">
+			<div id="big-pic-tablet" style="max-width:none; width:6000px; height:6000px; overflow:hidden; ">
 				<img src="imgs/path3.png" width="100%" height="100%">
 			</div>
 		</div>
@@ -86,7 +86,7 @@
 
 
 		<div id="iphone-sphere" class="desktop-hidden tablet-hidden">
-			<div id="iphone-t" class="desktop-hidden tablet-hidden">
+			<div id="iphone-sphere-text" class="desktop-hidden tablet-hidden">
 
 				<h3 id="iphone-day"></h3>
 				<h3 id="iphone-month"></h3>
@@ -94,7 +94,7 @@
 			</div>
 		</div>
 
-		<div class="grid">
+		<div class="grid" >
 			<div class="row mobile-hidden desktop-hidden">
 				<div id="sphere-tablet">
 				</div>
@@ -155,6 +155,10 @@
               		<img src="imgs/vie_publique/txt/1935-03-01.jpg">  
 				</div>
 
+				<div id="image-container" style="z-index:-1;">
+					<img src="imgs/vie_publique/img/vp-img-14.jpg" style="width:40%; margin-right:3%; margin-top:5%;">
+				</div>
+
 			</div>
 
 
@@ -176,7 +180,7 @@
 					<img class="marge" src="imgs/vie_scientifique/txt/1913-09-13.jpg" data-day="13th" data-month="September" data-year="1913">
 					<img class="sansmargebas" src="imgs/vie_scientifique/img/vs-img-4.jpg" data-day="17th" data-month="September" data-year="1913">
 					<img class="marge" src="imgs/vie_scientifique/txt/1913-09-17.jpg" data-day="17th" data-month="September" data-year="1913">
-					<img class="sansmargebas" src="imgs/vie_scientifique/txt/1921-02-27_1.jpg" data-day="27th" data-month="February" data-year="1921">
+					<img class="sansmargebas" src="imgs/vie_scientifique/txt/low_1921-02-27_1.jpg" data-day="27th" data-month="February" data-year="1921">
 					<img class="sansmargebas" src="imgs/vie_scientifique/img/vs-img-7.jpg" data-day="27th" data-month="February" data-year="1921">
 					<img class="marge" src="imgs/vie_scientifique/txt/1921-02-27_2.jpg" ddata-day="27th" data-month="February" data-year="1921">
 					<img class="sansmargebas" src="imgs/vie_scientifique/img/vs-img-5.jpg" data-day="7th" data-month="March" data-year="1921">
