--- a/index.html
+++ b/index.html
@@ -94,15 +94,17 @@
 			</div>
 		</div>
 
+		<div id="sphere-tablet" class="desktop-hidden mobile-hidden">
+				<span id="sphere-text-tablet" class="desktop-hidden mobile-hidden">
+					<h1 id="date-month-tablet"></h1>
+					<h1 id="date-day-tablet"></h1>
+					<h1 id="date-year-tablet">  </h1>
+				</span>
+		</div>
+
 		<div class="grid" >
 			<div class="row mobile-hidden desktop-hidden">
-				<div id="sphere-tablet">
-				</div>
-				<span id="sphere-text-tablet">
-					<h1 id="date-month">January</h1>
-					<h1 id="date-day">2</h1>
-					<h1 id="date-year">1934</h1>
-				</span>
+				
 
 				<div class="column six" id="scroll-tablet-container">
 					<img src="imgs/vie_publique/txt/1906-04-20.jpg">
@@ -155,8 +157,8 @@
               		<img src="imgs/vie_publique/txt/1935-03-01.jpg">  
 				</div>
 
-				<div id="image-container" style="z-index:-1;">
-					<img src="imgs/vie_publique/img/vp-img-14.jpg" style="width:40%; margin-right:3%; margin-top:5%;">
+				<div id="image-container"
+					<img src="imgs/vie_publique/img/vp-img-14.jpg" style="width:40%; padding-right:3%; padding-top:5%;">
 				</div>
 
 			</div>
