--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 			</div>
 		</div>
 
-		<div id="sphere-tablet" class="desktop-hidden mobile-hidden">
+		<div class="desktop-hidden mobile-hidden" id="sphere-tablet">
 				<span id="sphere-text-tablet" class="desktop-hidden mobile-hidden">
 					<h1 id="date-month-tablet"></h1>
 					<h1 id="date-day-tablet"></h1>
@@ -107,54 +107,54 @@
 				
 
 				<div class="column six" id="scroll-tablet-container">
-					<img src="imgs/vie_publique/txt/1906-04-20.jpg">
-					<img src="imgs/vie_publique/img/vp-img-14.jpg">
-					<img src="imgs/vie_publique/txt/1906-04-22.jpg">
-					<img src="imgs/vie_publique/txt/1911-11-24.jpg">
-					<img src="imgs/vie_publique/txt/1911-11-25.jpg">
-					<img src="imgs/vie_publique/txt/1911-11-28_1.jpg">
-					<img src="imgs/vie_publique/img/vp-img-2.jpg">
-					<img src="imgs/vie_publique/txt/1911-11-28_2.jpg">
-					<img src="imgs/vie_publique/txt/1911-11-28_3.jpg">					
-					<img src="imgs/vie_publique/txt/1912-01-03.jpg">
-					<img src="imgs/vie_publique/img/vp-img-7.jpg">
-					<img src="imgs/vie_publique/txt/1912-01-04.jpg">
-					<img src="imgs/vie_publique/txt/1912-01-05.jpg">
-					<img src="imgs/vie_publique/txt/1912-01-06.jpg">
-					<img src="imgs/vie_publique/txt/1912-01-26.jpg">
-					<img src="imgs/vie_publique/txt/1912-07-23.jpg">
-					<img src="imgs/vie_publique/txt/1921-02-07.jpg">
-					<img src="imgs/vie_publique/txt/1921-02-28.jpg">
-					<img src="imgs/vie_publique/txt/1921-03-03.jpg">
-					<img src="imgs/vie_publique/txt/1921-03-10.jpg">
-					<img src="imgs/vie_publique/txt/1921-03-13.jpg">
-					<img src="imgs/vie_publique/txt/1921-03-13_2.jpg">
-					<img src="imgs/vie_publique/img/vp-img-15.jpg">
-					<img src="imgs/vie_publique/txt/1921-03-14.jpg">
-					<img src="imgs/vie_publique/txt/1921-03-20.jpg">
-                    <img src="imgs/vie_publique/txt/1921-04-01.jpg">
-                    <img src="imgs/vie_publique/txt/1921-04-14.jpg">
-                    <img src="imgs/vie_publique/txt/1921-04-20.jpg">
-                    <img src="imgs/vie_publique/txt/1921-04-26.jpg">
-                    <img src="imgs/vie_publique/txt/1921-05-04.jpg">
-                    <img src="imgs/vie_publique/txt/1921-05-05.jpg">
-                    <img src="imgs/vie_publique/img/vp-img-17.jpg">
-                    <img src="imgs/vie_publique/txt/1921-05-11.jpg">
-                    <img src="imgs/vie_publique/img/vp-img-9.jpg">
-                    <img src="imgs/vie_publique/txt/1921-05-21.jpg">
-                    <img src="imgs/vie_publique/img/vp-img-8.jpg">
-                    <img src="imgs/vie_publique/img/vp-img-3.jpg">
-                    <img src="imgs/vie_publique/txt/1921-06-25.jpg">
-                    <img src="imgs/vie_publique/txt/1921-07-03.jpg">
-                    <img src="imgs/vie_publique/txt/1932-04-03.jpg">
-                    <img src="imgs/vie_publique/txt/1934-06-05.jpg">
-                    <img src="imgs/vie_publique/txt/1934-07-05_1.jpg">
-                    <img src="imgs/vie_publique/txt/1934-07-05_2.jpg">
-                    <img src="imgs/vie_publique/txt/1934-07-05_3.jpg">
-                    <img src="imgs/vie_publique/txt/1934-07-06.jpg">
-                    <img src="imgs/vie_publique/txt/1934-07-09.jpg">
-                    <img src="imgs/vie_publique/txt/1934-11-07.jpg">
-              		<img src="imgs/vie_publique/txt/1935-03-01.jpg">  
+					<img class="marge" src="imgs/vie_publique/txt/1906-04-20.jpg">
+<!-- 					<img class="marge" src="imgs/vie_publique/img/vp-img-14.jpg"> -->
+					<img class="marge" src="imgs/vie_publique/txt/1906-04-22.jpg">
+					<img class="marge" src="imgs/vie_publique/txt/1911-11-24.jpg">
+					<img class="marge" src="imgs/vie_publique/txt/1911-11-25.jpg">
+					<img class="sansmargebas" src="imgs/vie_publique/txt/1911-11-28_1.jpg">
+<!-- 					<img class="marge" src="imgs/vie_publique/img/vp-img-2.jpg"> -->
+					<img class="sansmargebas" src="imgs/vie_publique/txt/1911-11-28_2.jpg">
+					<img class="marge" src="imgs/vie_publique/txt/1911-11-28_3.jpg">					
+					<img class="marge" src="imgs/vie_publique/txt/1912-01-03.jpg">
+<!-- 					<img class="marge" src="imgs/vie_publique/img/vp-img-7.jpg"> -->
+					<img class="marge" src="imgs/vie_publique/txt/1912-01-04.jpg">
+					<img class="marge" src="imgs/vie_publique/txt/1912-01-05.jpg">
+					<img class="marge" src="imgs/vie_publique/txt/1912-01-06.jpg">
+					<img class="marge" src="imgs/vie_publique/txt/1912-01-26.jpg">
+					<img class="marge" src="imgs/vie_publique/txt/1912-07-23.jpg">
+					<img class="marge" src="imgs/vie_publique/txt/1921-02-07.jpg">
+					<img class="marge" src="imgs/vie_publique/txt/1921-02-28.jpg">
+					<img class="marge" src="imgs/vie_publique/txt/1921-03-03.jpg">
+					<img class="marge" src="imgs/vie_publique/txt/1921-03-10.jpg">
+					<img class="marge" src="imgs/vie_publique/txt/1921-03-13.jpg">
+					<img class="sansmargebas" src="imgs/vie_publique/txt/1921-03-13_2.jpg">
+<!-- 					<img class="marge" src="imgs/vie_publique/img/vp-img-15.jpg"> -->
+					<img class="marge" src="imgs/vie_publique/txt/1921-03-14.jpg">
+					<img class="marge" src="imgs/vie_publique/txt/1921-03-20.jpg">
+                    <img class="marge" src="imgs/vie_publique/txt/1921-04-01.jpg">
+                    <img class="marge" src="imgs/vie_publique/txt/1921-04-14.jpg">
+                    <img class="marge" src="imgs/vie_publique/txt/1921-04-20.jpg">
+                    <img class="marge" src="imgs/vie_publique/txt/1921-04-26.jpg">
+                    <img class="marge" src="imgs/vie_publique/txt/1921-05-04.jpg">
+                    <img class="marge" src="imgs/vie_publique/txt/1921-05-05.jpg">
+                    <img class="marge" src="imgs/vie_publique/img/vp-img-17.jpg">
+                    <img class="marge" src="imgs/vie_publique/txt/1921-05-11.jpg">
+                    <img class="marge" src="imgs/vie_publique/img/vp-img-9.jpg">
+                    <img class="marge" src="imgs/vie_publique/txt/1921-05-21.jpg">
+                    <img class="marge" src="imgs/vie_publique/img/vp-img-8.jpg">
+                    <img class="marge" src="imgs/vie_publique/img/vp-img-3.jpg">
+                    <img class="marge" src="imgs/vie_publique/txt/1921-06-25.jpg">
+                    <img class="marge" src="imgs/vie_publique/txt/1921-07-03.jpg">
+                    <img class="marge" src="imgs/vie_publique/txt/1932-04-03.jpg">
+                    <img class="marge" src="imgs/vie_publique/txt/1934-06-05.jpg">
+                    <img class="marge" src="imgs/vie_publique/txt/1934-07-05_1.jpg">
+                    <img class="marge" src="imgs/vie_publique/txt/1934-07-05_2.jpg">
+                    <img class="marge" src="imgs/vie_publique/txt/1934-07-05_3.jpg">
+                    <img class="marge" src="imgs/vie_publique/txt/1934-07-06.jpg">
+                    <img class="marge" src="imgs/vie_publique/txt/1934-07-09.jpg">
+                    <img class="marge" src="imgs/vie_publique/txt/1934-11-07.jpg">
+              		<img class="marge" src="imgs/vie_publique/txt/1935-03-01.jpg">  
 				</div>
 
 				<div id="image-container"
