--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
 					<img src="imgs/vie_publique/img/vp-img-2.jpg" style="display:none; position: relative; left: 3000px;top: 3000px;width: 500px;height: auto;">
 
 				</div>
+
+				
 			</div>
 		</div>
 
@@ -57,6 +59,19 @@
 			<div id="big-pic-tablet" style="max-width:none; width:6000px; height:6000px; overflow:hidden; ">
 				<img src="imgs/path3.png" width="100%" height="100%">
 			</div>
+
+			<!-- TABLET image container -->
+			<div id="img-container-fat-tablet" style="position:absolute; max-width:none; width:6000px; height:6000px; overflow:hidden; background-color:rgba(200,0,0,0.5); top:0; left:0;">
+
+					<img src="imgs/vie_publique/img/vp-img-1.jpg" style="display:none; position: relative; left: 3000px;top: 10px;width: 500px;height: auto;">
+				
+
+					<img src="imgs/vie_publique/img/vp-img-2.jpg" style="display:none; position: relative; left: 3300px;top: 300px;width: 500px;height: auto;">
+
+					<img src="imgs/vie_publique/img/vp-img-3.jpg" style="display:none; position: relative; left: 3000px;top: 3000px;width: 500px;height: auto;">
+
+				</div>
+
 		</div>
 		
 		<div class="row mobile-hidden tablet-hidden" style="overflow:hidden;">
