--- a/index.html
+++ b/index.html
@@ -63,9 +63,12 @@
 			<!-- TABLET image container -->
 			<div id="img-container-fat-tablet">
 
-					<img src="imgs/vie_publique/img/vp-img-14.jpg" style="display:none; position: relative; left: 60.75%;top: 28.7%;width: 8.5%;height: auto;">
-					<img src="imgs/vie_publique/img/vp-img-2.jpg" style="display:none; position: relative; left: 3300px;top: 300px;width: 500px;height: auto;">
-					<img src="imgs/vie_publique/img/vp-img-3.jpg" style="display:none; position: relative; left: 3000px;top: 3000px;width: 500px;height: auto;">
+					<img src="imgs/vie_publique/img/vp-img-14.jpg" style="display:none; position: absolute; left: 60.35%;top: 31.7%;width: 8.5%;height: auto;">
+					<img src="imgs/vie_publique/img/vp-img-2.jpg" style="display:none; position: absolute; left: 55.4%;top: 88.85%;width: 8.5%;height: auto;">
+					<img src="imgs/vie_publique/img/vp-img-7.jpg" style="display:none; position: absolute; left: 17.9%;top: 41.5%;width: 8.5%;height: auto;">
+					<img src="imgs/vie_publique/img/vp-img-18.jpg" style="display:none; position: absolute; left: 9.55%;top: 24.2%;width: 8.5%;height: auto;">
+					<img src="imgs/vie_publique/img/vp-img-19.jpg" style="display:none; position: absolute; left: 57.9%;top: 40.1%;width: 8.5%;height: auto;">
+					<img src="imgs/vie_publique/img/vp-img-15.jpg" style="display:none; position: absolute; left: 68.60%;top: 85.3%;width: 8.5%;height: auto;">
 
 				</div>
 
@@ -159,7 +162,7 @@
 					<img class="marge" src="imgs/vie_publique/txt/1921-03-10.jpg">
 					<img class="marge" src="imgs/vie_publique/txt/1921-03-13.jpg">
 					<img class="sansmargebas" src="imgs/vie_publique/txt/1921-03-13_2.jpg">
-<!-- 					<img class="marge" src="imgs/vie_publique/img/vp-img-15.jpg"> -->
+					<!-- <img class="marge" src="imgs/vie_publique/img/vp-img-15.jpg"> -->
 					<img class="marge" src="imgs/vie_publique/txt/1921-03-14.jpg">
 					<img class="marge" src="imgs/vie_publique/txt/1921-03-20.jpg">
                     <img class="marge" src="imgs/vie_publique/txt/1921-04-01.jpg">
@@ -168,12 +171,12 @@
                     <img class="marge" src="imgs/vie_publique/txt/1921-04-26.jpg">
                     <img class="marge" src="imgs/vie_publique/txt/1921-05-04.jpg">
                     <img class="marge" src="imgs/vie_publique/txt/1921-05-05.jpg">
-                    <img class="marge" src="imgs/vie_publique/img/vp-img-17.jpg">
+<!--                     <img class="marge" src="imgs/vie_publique/img/vp-img-17.jpg"> -->
                     <img class="marge" src="imgs/vie_publique/txt/1921-05-11.jpg">
-                    <img class="marge" src="imgs/vie_publique/img/vp-img-9.jpg">
+<!--                     <img class="marge" src="imgs/vie_publique/img/vp-img-9.jpg"> -->
                     <img class="marge" src="imgs/vie_publique/txt/1921-05-21.jpg">
-                    <img class="marge" src="imgs/vie_publique/img/vp-img-8.jpg">
-                    <img class="marge" src="imgs/vie_publique/img/vp-img-3.jpg">
+<!--                     <img class="marge" src="imgs/vie_publique/img/vp-img-8.jpg">
+                    <img class="marge" src="imgs/vie_publique/img/vp-img-3.jpg"> -->
                     <img class="marge" src="imgs/vie_publique/txt/1921-06-25.jpg">
                     <img class="marge" src="imgs/vie_publique/txt/1921-07-03.jpg">
                     <img class="marge" src="imgs/vie_publique/txt/1932-04-03.jpg">
