--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<body>
 		<div class="mobile-hidden tablet-hidden" style="overflow:hidden; height:8000px; position:fixed;">
 			<div id="big-pic" style="max-width:none; width:6000px; height:6000px; overflow:hidden;">
-				<img src="imgs/atom.svg" width="100%" height="100%">
+				<img src="imgs/atom2.svg" width="100%" height="100%" style="z-index:1000">
 			</div>
 			<div id="img-container-fat" style="position:absolute; max-width:none; width:6000px; height:6000px; overflow:hidden; top:0; left:0;">
 
@@ -42,12 +42,13 @@
 				ajouter un else if(..) pour les autres cas.
 				"show_image(0);" montre la première image de la liste ci dessous, show_image(1) la deuxième etc.
 			-->
-					<img src="imgs/vie_publique/img/vp-img-1.jpg" style="display:none; position: relative; left: 3000px;top: 10px;width: 500px;height: auto;">
-				
+					<img src="imgs/desktop/madamecurie_9.jpg" style="display:none; position: absolute; left: 50%;top: 4%;width: 15%;height: auto; border: 5px solid black;">
 
-					<img src="imgs/vie_publique/img/vp-img-3.jpg" style="display:none; position: relative; left: 3300px;top: 300px;width: 500px;height: auto;">
+					<img src="imgs/desktop/img-madamecurie-1.jpg" style="display:none;  position: absolute; left: 51%;top: 12%;width: 25%;height: auto; z-index:-1000">
 
-					<img src="imgs/vie_publique/img/vp-img-2.jpg" style="display:none; position: relative; left: 3000px;top: 3000px;width: 500px;height: auto;">
+					<img src="imgs/desktop/MadameCurie_8_2.jpg" style="display:none;  position: absolute; left: 62%;top: 30%;width: 15%;height: auto;border: 5px solid black;">
+
+					<img src="imgs/desktop/vs-img-3.jpg" style="display:none;  position: absolute; left: 62%;top: 40%;width: 25%;height: auto; z-index:-1000">
 
 				</div>
 
@@ -57,7 +58,7 @@
 
 		<div class="mobile-hidden desktop-hidden" style="overflow:hidden; height:8000px; position:fixed; top:0;">
 			<div id="big-pic-tablet" style="max-width:none; width:6000px; height:6000px; overflow:hidden; ">
-				<img src="imgs/atom.svg" width="100%" height="100%">
+				<img src="imgs/atom2.svg" width="100%" height="100%">
 			</div>
 
 			<!-- TABLET image container -->
@@ -69,7 +70,8 @@
 					<img src="imgs/vie_publique/img/vp-img-18.jpg" style="display:none; position: absolute; left: 9.55%;top: 24.2%;width: 8.5%;height: auto;">
 					<img src="imgs/vie_publique/img/vp-img-19.jpg" style="display:none; position: absolute; left: 55.3%;top: 37.75%;width: 8.5%;height: auto;">
 					<img src="imgs/vie_publique/img/vp-img-15.jpg" style="display:none; position: absolute; left: 54.75%;top: 78.3%;width: 23%;height: auto;">
- 					<img src="imgs/vie_publique/img/vp-img-9.jpg" style="display:none; position: absolute; left: 49.5%;top: 66%;width: 8.5%;height: auto;">
+ 					<img src="imgs/vie_publique/img/vp-img-9.jpg" style="display:none; position: absolute; left: 40.1%;top: 66%;width: 8.5%;height: auto;">
+  					<img src="imgs/vie_publique/img/vp-img-3.jpg" style="display:none; position: absolute; left: 49.5%;top: 66%;width: 8.5%;height: auto;">
  			</div>
 
 		</div>
