--- a/index.html
+++ b/index.html
@@ -62,7 +62,20 @@
 			</div>
 
 			<!-- TABLET image container -->
-			<div id="img-container-fat-tablet">
+			<div id="img-container-fat-tablet-landscape" class="img-container-fat-tablet hidden-portrait">
+
+					<img src="imgs/vie_publique/img/vp-img-14.jpg" style="display:none; position: absolute; left: 60.35%;top: 31.7%;width: 8.5%;height: auto;">
+					<img src="imgs/vie_publique/img/vp-img-2.jpg" style="display:none; position: absolute; left: 55.4%;top: 88.85%;width: 8.5%;height: auto;">
+					<img src="imgs/vie_publique/img/vp-img-7.jpg" style="display:none; position: absolute; left: 12.4%;top: 32%;width: 26.4%;height: auto;">
+					<img src="imgs/vie_publique/img/vp-img-18.jpg" style="display:none; position: absolute; left: 9.55%;top: 24.2%;width: 8.5%;height: auto;">
+					<img src="imgs/vie_publique/img/vp-img-19.jpg" style="display:none; position: absolute; left: 55.3%;top: 37.75%;width: 8.5%;height: auto;">
+					<img src="imgs/vie_publique/img/vp-img-15.jpg" style="display:none; position: absolute; left: 54.75%;top: 78.3%;width: 23%;height: auto;">
+ 					<img src="imgs/vie_publique/img/vp-img-9.jpg" style="display:none; position: absolute; left: 40.1%;top: 66%;width: 8.5%;height: auto;">
+  					<img src="imgs/vie_publique/img/vp-img-3.jpg" style="display:none; position: absolute; left: 49.5%;top: 66%;width: 8.5%;height: auto;">
+ 			</div>
+
+ 				<!-- TABLET image container -->
+			<div id="img-container-fat-tablet-portrait" class="img-container-fat-tablet hidden-landscape">
 
 					<img src="imgs/vie_publique/img/vp-img-14.jpg" style="display:none; position: absolute; left: 60.35%;top: 31.7%;width: 8.5%;height: auto;">
 					<img src="imgs/vie_publique/img/vp-img-2.jpg" style="display:none; position: absolute; left: 55.4%;top: 88.85%;width: 8.5%;height: auto;">
