--- a/index.html
+++ b/index.html
@@ -66,27 +66,35 @@
 			<!-- TABLET image container -->
 			<div id="img-container-fat-tablet-landscape" class="img-container-fat-tablet hidden-portrait">
 
-					<img src="imgs/vie_publique/img/vp-img-14.jpg" style="display:none; position: absolute; left: 60.35%;top: 31.7%;width: 8.5%;height: auto;">
-					<img src="imgs/vie_publique/img/vp-img-2.jpg" style="display:none; position: absolute; left: 55.4%;top: 88.85%;width: 8.5%;height: auto;">
+					<img src="imgs/vie_publique/img/vp-img-14.jpg" style="display:none; position: absolute; left: 60.35%;top: 32.05%;width: 8.5%;height: auto;">
+					<img src="imgs/vie_publique/img/vp-img-2.jpg" style="display:none; position: absolute; left: 55.4%;top: 89.1%;width: 8.5%;height: auto;">
 					<img src="imgs/vie_publique/img/vp-img-7.jpg" style="display:none; position: absolute; left: 12.4%;top: 32%;width: 26.4%;height: auto;">
-					<img src="imgs/vie_publique/img/vp-img-18.jpg" style="display:none; position: absolute; left: 9.55%;top: 24.2%;width: 8.5%;height: auto;">
-					<img src="imgs/vie_publique/img/vp-img-19.jpg" style="display:none; position: absolute; left: 55.3%;top: 37.75%;width: 8.5%;height: auto;">
+					<img src="imgs/vie_publique/img/vp-img-18.jpg" style="display:none; position: absolute; left: 38.35%;top: 23.45%;width: 8.5%;height: auto;">
+					<img src="imgs/vie_publique/img/vp-img-19.jpg" style="display:none; position: absolute; left: 55.6%;top: 37.85%;width: 8.5%;height: auto;">
 					<img src="imgs/vie_publique/img/vp-img-15.jpg" style="display:none; position: absolute; left: 54.75%;top: 78.3%;width: 23%;height: auto;">
- 					<img src="imgs/vie_publique/img/vp-img-9.jpg" style="display:none; position: absolute; left: 40.1%;top: 66%;width: 8.5%;height: auto;">
-  					<img src="imgs/vie_publique/img/vp-img-3.jpg" style="display:none; position: absolute; left: 49.5%;top: 66%;width: 8.5%;height: auto;">
+ 					<img src="imgs/vie_publique/img/vp-img-9.jpg" style="display:none; position: absolute; left: 40.1%;top: 59.9%;width: 8.5%;height: auto;">
+  					<img src="imgs/vie_publique/img/vp-img-16.jpg" style="display:none; position: absolute; left: 48.85%;top: 59.9%;width: 8.5%;height: auto;">
+  					<img src="imgs/vie_publique/img/vp-img-20.jpg" style="display:none; position: absolute; left: 72.4%;top: 32.95%; width:14%;height: auto;">
+  					<img src="imgs/vie_publique/img/vp-img-23.jpg" style="display:none; position: absolute; left: 10%; top: 9%;width:52%;height: auto;">
+   					<img src="imgs/vie_publique/img/vp-img-24.jpg" style="display:none; position: absolute; left: 10%; top: 8%;width:50%;height: auto;">
+   					<img src="imgs/vie_publique/img/vp-img-22.jpg" style="display:none; position: absolute; left: 85.2%;top: 53.5%;width: 8.5%;height: auto;">
  			</div>
 
  				<!-- TABLET image container -->
 			<div id="img-container-fat-tablet-portrait" class="img-container-fat-tablet hidden-landscape">
 
-					<img src="imgs/vie_publique/img/vp-img-14.jpg" style="display:none; position: absolute; left: 60.35%;top: 31.7%;width: 3.5%;height: auto;">
-					<img src="imgs/vie_publique/img/vp-img-2.jpg" style="display:none; position: absolute; left: 55.4%;top: 88.85%;width: 8.5%;height: auto;">
+					<img src="imgs/vie_publique/img/vp-img-14.jpg" style="display:none; position: absolute; left: 60.95%;top: 28.35%;width: 6.4%;height: auto;">
+					<img src="imgs/vie_publique/img/vp-img-2.jpg" style="display:none; position: absolute; left: 57.45%;top: 86.25%;width: 6.4%;height: auto;">
 					<img src="imgs/vie_publique/img/vp-img-7.jpg" style="display:none; position: absolute; left: 12.4%;top: 32%;width: 26.4%;height: auto;">
-					<img src="imgs/vie_publique/img/vp-img-18.jpg" style="display:none; position: absolute; left: 9.55%;top: 24.2%;width: 8.5%;height: auto;">
-					<img src="imgs/vie_publique/img/vp-img-19.jpg" style="display:none; position: absolute; left: 55.3%;top: 37.75%;width: 8.5%;height: auto;">
-					<img src="imgs/vie_publique/img/vp-img-15.jpg" style="display:none; position: absolute; left: 54.75%;top: 78.3%;width: 23%;height: auto;">
- 					<img src="imgs/vie_publique/img/vp-img-9.jpg" style="display:none; position: absolute; left: 40.1%;top: 66%;width: 8.5%;height: auto;">
-  					<img src="imgs/vie_publique/img/vp-img-3.jpg" style="display:none; position: absolute; left: 49.5%;top: 66%;width: 8.5%;height: auto;">
+					<img src="imgs/vie_publique/img/vp-img-18.jpg" style="display:none; position: absolute; left: 39.1%;top: 23.2%;width: 6.4%;height: auto;">
+					<img src="imgs/vie_publique/img/vp-img-19.jpg" style="display:none; position: absolute; left: 56.55%;top: 37.85%;width: 6.4%;height: auto;">
+					<img src="imgs/vie_publique/img/vp-img-15.jpg" style="display:none; position: absolute; left: 54.8%;top: 77.5%;width: 23%;height: auto;">
+ 					<img src="imgs/vie_publique/img/vp-img-9.jpg" style="display:none; position: absolute; left: 42.1%;top: 57.82%;width: 6.4%;height: auto;">
+  					<img src="imgs/vie_publique/img/vp-img-16.jpg" style="display:none; position: absolute; left: 48.7%;top: 57.82%;width: 6.4%;height: auto;">
+  					<img src="imgs/vie_publique/img/vp-img-20.jpg" style="display:none; position: absolute; left: 72.4%;top: 32.05%; width:14%;height: auto;">
+  					<img src="imgs/vie_publique/img/vp-img-23.jpg" style="display:none; position: absolute; left: 10%; top: 9%;width:52%;height: auto;">
+   					<img src="imgs/vie_publique/img/vp-img-24.jpg" style="display:none; position: absolute; left: 10%; top: 8%;width:50%;height: auto;">
+   					<img src="imgs/vie_publique/img/vp-img-22.jpg" style="display:none; position: absolute; left: 85.2%;top: 51.85%;width: 6.4%;height: auto;">
  			</div>
 
 		</div>
@@ -197,8 +205,8 @@
                     <img class="marge" src="imgs/vie_publique/txt/1921-07-03.jpg">
                     <img class="marge" src="imgs/vie_publique/txt/1932-04-03.jpg">
                     <img class="marge" src="imgs/vie_publique/txt/1934-06-05.jpg">
-                    <img class="marge" src="imgs/vie_publique/txt/1934-07-05_1.jpg">
-                    <img class="marge" src="imgs/vie_publique/txt/1934-07-05_2.jpg">
+                    <img class="sansmargebas" src="imgs/vie_publique/txt/1934-07-05_1.jpg">
+                    <img class="sansmargebas" src="imgs/vie_publique/txt/1934-07-05_2.jpg">
                     <img class="marge" src="imgs/vie_publique/txt/1934-07-05_3.jpg">
                     <img class="marge" src="imgs/vie_publique/txt/1934-07-06.jpg">
                     <img class="marge" src="imgs/vie_publique/txt/1934-07-09.jpg">
